--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,7 @@
 gradio==5.24.0
 langchain==0.3.23
+langchain-mcp-adapters==0.0.9
 langchain-ollama==0.3.1
 langgraph==0.3.34
+mcp==1.6.0
 mlflow==2.21.0
-numpy==2.1.1
-pandas==2.2.2
-ray==2.32.0
-scikit-learn==1.5.1
-torch==2.4.0
-torchinfo==1.8.0
-uv==0.6.6
