Added Graph RAG with Neo4j

--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,4 @@
+OLLAMA_DEFAULT_LLM = 'gemma3:4b'
+OLLAMA_DEFAULT_EMBEDDING = 'nomic-embed-text'
 OLLAMA_BASE_URL = 'localhost:11434'
 MLFLOW_TRACKING_URI = 'localhost:5000'
