--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,12 +9,15 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "gradio==5.24.0",
-    "langchain>=0.3.23",
+    "langchain-experimental>=0.3.4",
     "langchain-mcp-adapters>=0.0.9",
+    "langchain-neo4j>=0.4.0",
     "langchain-ollama>=0.3.1",
+    "langchain>=0.3.23",
     "langgraph>=0.3.34",
     "mcp>=1.6.0",
     "mlflow>=2.21.0",
+    "neo4j>=5.28.1",
     "python-dotenv>=1.0.1",
 ]
 
