--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 gradio==5.24.0
-langchain==0.3.23
+langchain-experimental==0.3.4
 langchain-mcp-adapters==0.0.9
+langchain-neo4j==0.4.0
 langchain-ollama==0.3.1
+langchain==0.3.23
 langgraph==0.3.34
 mcp==1.6.0
 mlflow==2.21.0
+neo4j==5.28.1
